<resources>
    <string name="app_name">Stream</string>
    <string name="title_activity_login_to_delete">Sign in</string>

    <!-- Strings related to projects-->
    <string name="Projects_activity_title">MY PROJECTS</string>

    <!-- Strings related to new project -->
    <string name="new_project_activity_title">New Project</string>
    <string name="new_project_prompt_name">"Please enter name"</string>
    <string name="new_project_prompt_date">""Please enter date: (dd/mm/yyyy)""</string>
    <string name="new_project_name_hint">Project Name</string>
    <string name="new_project_due_date_hint">Due Date (dd/mm/yyyy)</string>
    <string name="new_project_add_team_members_nautical_pun"><string>"Don't sail solo - Add team members!" </string></string>
    <string name="new_project_add_user_hint">Email/Username</string>
    <string name="new_project_add_user_button_title">ADD</string>
    <string name="new_project_create_project_button_title">CREATE</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="login_enter_email_username">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_create_user">Create New User</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_todelete">Sign in</string>
    <string name="facebook_app_id">159885764463088</string>
    <string name="fb_login_protocol_scheme">fb159885764463088</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Facebook login strings-->
    <string name="facebook_login">Log in with Facebook</string>
    <string name="facebook_signup">Sign up with Facebook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="project_page">"Welcome to the project page"</string>
    <string name="chat_page">"Welcome to the chat page"</string>
    <string name="board_page">"Welcome to the board page"</string>
    <string name="project_home_page_">"Welcome to the home page"</string>
    <string name="settings_page">"Welcome to the settings page"</string>
    <string name="tasks_page">"Welcome to the tasks page"</string>
    <string name="calendar_page">"Welcome to the calendar page"</string>
    <string name="dialog_description">Description</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_subtitle">Subtitle</string>
    <string name="dialog_add">Add Pin</string>
    <string name="dialog_submit">Submit</string>
    <string name="dialog_cancel">cancel</string>
    <string name="title">Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="task_due_date">Due date</string>
    <string name="task_user">User</string>
    <string name="task_description">Description</string>
    <string name="no_tasks">Your project has no tasks. Create one here!</string>

    <!--Projects strings-->
    <string name ="no_projects">No projects yet. Create a project to Stream with your team!</string>




    <!-- Task notification strings -->
    <string name ="reminder_notification_dialog_title">"Want to remind "</string>
    <string name="review_notification_dialog_title1">"Need "</string>
    <string name="review_notification_dialog_title2">" to make a change?"</string>
    <string name="reminder_notification_dialog_titles">"Want to send a friendly reminder?"</string>
    <string name="reminder_notification_title">"Here's a friendly reminder!"</string>
    <string name="review_notification_title">"Here's a suggestion"</string>
    <string name="reminder_notification_info">"Send a notification to remind "</string>
    <string name="reminder_notification_info2">" to complete this task"</string>
    <string name="review_notification_info">"Send a notification to "</string>
    <string name="review_notification_info2">" to suggest a change"</string>
    <string name="title_activity_new_project">newProjectActivity</string>
    <string name="task_markAsComplete">Done?</string>
    <string name='task_unmark'>Press to mark as incomplete</string>
    <string name='dismiss'>Dismiss</string>
    <string name='go'>Go To</string>

    <!-- Pin String -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pin_add_name">Add Pin</string>
    <string name="pin_view_name">View Pin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_delete">Delete</string>
    <string name="no_pins">Your project has no pins. Create one here!</string>


    <!-- Calendar strings -->
    <string name="meeting_name">Meeting name</string>
    <string name="meeting_description">Meeting description</string>
    <string name="meeting_location">Meeting location</string>
    <string name="meeting_time">Meeting time</string>
    <string name="meeting_markAsComplete">Mark meeting as complete</string>
    <string name="meeting_reminder_notification_title">Have a meeting coming up?</string>
    <string name="meeting_reminder_notification_info">Send a notification to remind everyone</string>
    <string name="meeting_reminder_notification_title_send">Heres a reminder about your meeting coming up!</string>
    <string name="no_meetings">Your project has no meetings. Create one here!</string>

    <!-- General strings used in multiple places -->
    <string name="enter_message">Enter a message</string>
    <string name ="empty"></string>

</resources>
