<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:weightSum="1">

    <ImageView
        android:layout_width="288dp"
        android:layout_height="77dp"
        android:background="@color/background"
        app:srcCompat="@drawable/create_new_task"
        android:id="@+id/createNewTaskDialogTitle" />
    <!-- TODO: Change image that is on the dialog to say "New meeting" -->

    <EditText
        android:id="@+id/new_meeting_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textSize="25sp"
        android:hint="@string/meeting_name" />

    <EditText
        android:id="@+id/new_meeting_description"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/meeting_description"/>

    <EditText
        android:id="@+id/new_meeting_location"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/meeting_location"/>

</LinearLayout>