<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View android:id="@+id/rectangle_at_the_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="#660066"
        android:visibility="visible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/reminderMeetingTitle"
        android:text="@string/meeting_reminder_notification_title"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:layout_marginTop="21dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/meeting_reminder_notification_info"
        android:textSize="12dp"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reminderMeetingNotificationInfo"
        android:layout_below="@+id/reminderMeetingTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />
    <View android:id="@+id/rectangle_at_the_bottom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#e5e7e8"
        android:visibility="visible"
        android:layout_below="@+id/rectangle_at_the_top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:inputType="text"
        android:background="@null"
        android:hint="@string/enter_message"
        android:ems="10"
        android:gravity="top|left"
        android:id="@+id/meetingMessageToSend"
        android:layout_below="@+id/rectangle_at_the_top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/rectangle_at_the_bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>