<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--TextView
        android:text="@string/dialog_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"/-->

    <ImageView
        android:id="@+id/crime_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_title"
        android:ems="10"
        android:id="@+id/dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/crime_photo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_subtitle"
        android:ems="10"
        android:id="@+id/dialog_subtitle"
        android:layout_below="@+id/dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_description"
        android:ems="10"
        android:id="@+id/dialog_description"
        android:layout_below="@+id/dialog_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>


    <ImageButton
        android:id="@+id/crime_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_below="@+id/dialog_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>

    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_submit"/>

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_cancel"/>

    </LinearLayout-->

</RelativeLayout>
