<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/taskUserLinearLayout"
            android:layout_below="@+id/taskDueDateLinearLayout"
            android:weightSum="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="24dp"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="@dimen/big_padding"
                android:layout_marginTop="20sp"
                app:srcCompat="@drawable/user_icon"
                android:id="@+id/imageView7" />

            <TextView
                android:text="@string/task_user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/user_expanded"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:textColor="@color/black_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_expanded"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginLeft="@dimen/small_padding"
            android:id="@+id/taskDueDateLinearLayout"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="@dimen/big_padding"
                android:layout_marginRight="@dimen/big_padding"
                app:srcCompat="@drawable/due_date" />

            <TextView
                android:text="@string/task_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:id="@+id/due_date_expanded"
                android:textColor="@color/black_button"
                android:gravity="center"/>

        </LinearLayout>

        <TextView
            android:text="@string/task_name"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/task_name_expanded"
            android:textColor="@color/darkBlueTextColor"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:translationZ="-10dp"
            android:elevation="@dimen/big_padding"/>



        <CheckBox
            android:text="@string/task_markAsComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick = "markAsComplete"
            android:id="@+id/checkBox"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/sendTaskNotification"
            android:layout_alignEnd="@+id/sendTaskNotification"
            android:layout_marginBottom="20dp"/>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/support"
            android:layout_below="@+id/sendTaskNotification"
            android:layout_alignLeft="@+id/sendTaskNotification"
            android:layout_alignStart="@+id/sendTaskNotification"
            android:id="@+id/editTask"
            app:backgroundTint="@color/customBlue" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/paper_place"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:id="@+id/sendTaskNotification"
            app:backgroundTint="@color/customBlue"
            android:layout_marginBottom="15dp"
            android:layout_above="@+id/description_expanded"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:id="@+id/deleteTask"
            android:tint="@color/white"
            app:backgroundTint="@color/customBlue"
            android:onClick = "deleteTask"
            android:layout_below="@+id/editTask"
            android:layout_alignLeft="@+id/editTask"
            android:layout_alignStart="@+id/editTask"
            android:layout_marginTop="16dp"
            app:fabSize="mini"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/info"
                android:layout_marginTop="36dp"
                android:layout_marginLeft="25sp"
                android:id="@+id/taskDescInfoIcon"
                android:background="@color/com_facebook_share_button_text_color"
                android:layout_below="@+id/task_name_expanded" />

        <TextView
            android:text="@string/task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description_expanded"
            android:gravity ="left"
            android:textColor="@color/black_button"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_toRightOf="@+id/taskDescInfoIcon"
            android:layout_toLeftOf="@+id/deleteTask"
            android:layout_toStartOf="@+id/deleteTask"
            android:layout_toEndOf="@+id/taskDescInfoIcon"
            android:layout_alignTop="@+id/taskDescInfoIcon" />


    </RelativeLayout>
</LinearLayout>